--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Stoppedwumm-Studios/youtube-too#readme",
   "dependencies": {
+    "@vercel/blob": "^0.20.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.3"
   }
