--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/Stoppedwumm-Studios/youtube-too#readme",
   "dependencies": {
     "@vercel/blob": "^0.20.0",
+    "@vercel/postgres": "^0.7.2",
     "express": "^4.18.2",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "vercel": "^33.4.1"
   }
 }
